# fasttext-serving

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  snapcraft.yaml
.github/workflows/: CI.yml  Release.yml
proto/: fasttext_serving.proto  predict.proto
python/: README.md  setup.cfg  setup.py
python/fasttext_serving/: __init__.py  predict_pb2.py  predict_pb2_grpc.py
snap/: snapcraft.yaml
src/: grpc.rs  http.rs  main.rs
src/grpc/: mod.rs  predict.rs  predict_grpc.rs
