[package]
name = "fasttext-serving"
version = "0.6.0-alpha.5"
authors = ["Messense Lv <messense@icloud.com>"]
description = "fastText model serving API server"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/fasttext-serving.git"
exclude = ["models/*"]

[package.metadata.deb]
maintainer = "Messense Lv <messense@icloud.com>"
copyright = "2018, Messense Lv. <messense@icloud.com>"
license-file = ["LICENSE", "3"]
extended-description = "fastText model serving API server"
depends = "$auto"
section = "text"
priority = "optional"
assets = [
    # binary
    ["target/release/fasttext-serving", "usr/bin/", "755"],
]

[dependencies]
fasttext = "0.4"
clap = "2.30"
log = "0.4.4"
pretty_env_logger = "0.4.0"
num_cpus = "1.8.0"
jemallocator = { version = "0.3.0", features= ["unprefixed_malloc_on_supported_platforms"] }
actix-web = { version = "2.0.0", default-features = false, features = ["compress"], optional = true }
actix-rt = { version = "1.0.0", optional = true }
serde = { version = "1.0.92", features = ["derive"] }
# grpc dependencies
prost = { version = "0.6", optional = true }
tonic = { version = "0.2.0", optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "macros"], optional = true }
bytes = { version = "0.5", optional = true }

[build-dependencies]
tonic-build = { version = "0.2", default-features = false, features = ["transport", "prost"], optional = true }

[features]
default = ["http", "grpc"]
http = ["actix-web", "actix-rt"]
grpc = ["tonic", "tokio", "futures", "prost", "bytes", "tonic-build"]

[profile.release]
lto = true
