[package]
name = "fasttext-serving"
version = "0.6.2"
authors = ["Messense Lv <messense@icloud.com>"]
description = "fastText model serving API server"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/messense/fasttext-serving.git"
exclude = ["models/*"]

[dependencies]
fasttext = "0.5"
clap = "2.30"
log = "0.4.4"
pretty_env_logger = "0.4.0"
num_cpus = "1.8.0"
actix-web = { version = "4.0.0-beta.1", default-features = false, features = ["compress"], optional = true }
serde = { version = "1.0.92", features = ["derive"] }
# grpc dependencies
prost = { version = "0.7", optional = true }
tonic = { version = "0.4.1", optional = true }
tonic-reflection = { version = "0.1.0", optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros"], optional = true }
bytes = { version = "1.0", optional = true }

[target.'cfg(all(unix, not(target_env = "musl"), not(target_arch = "aarch64")))'.dependencies]
jemallocator = { version = "0.3.0", features= ["unprefixed_malloc_on_supported_platforms"] }

[target.'cfg(windows)'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
tonic-build = { version = "0.4.1", default-features = false, features = ["transport", "prost"], optional = true }

[features]
default = ["http", "grpc"]
http = ["actix-web"]
grpc = ["tonic", "tokio", "futures", "prost", "bytes", "tonic-build", "tonic-reflection"]

[profile.release]
lto = true

[dev-dependencies]
actix-rt = "2.0.0-beta.2"

[package.metadata.maturin]
name = "fasttext-serving-server"
